Site and blocks are now dynamically loaded from the API. Cane info form fields are disbaled by default and enabled upon a successful barcode scan. Username and env values are stored in the preferences.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Rootstock Data</string>
+    <string name="username">username</string>
+    <string name="env">env</string> 
+    <string name="api">api_url</string>
+    <string name="pref_file">echo.rootstockapp.PREFERENCE_FILE</string>
 </resources>
