General:  - Config variables are always read from config file instead of passed or read from preferences.  - AppLoginActivity (previously AppLoginFragment) is now the entry point for the application.  - Removed ActionBar from AppLoginActivity to disable access to the menu options.  - Refactored application to use only API level 23 supported classes / functionality.
Dialogs:
 DateSelectionDialog:
  - Dialog loads to a supplied date, otherwise defaults to current date.
  - The activating TextView is no longer passed as an argument to creating the fragment to follow the Android guidelines.
 LoadDataDialog:
  - Removed OnIdentifierDataReceivedListener.

Forms:
 BaseFragment:
  - Enabling a form is now recursive through the child views.
  - Added a function to get all observations for a cane based on its ID (the _ID column in the Identifiers table).
 BudBreakFragment:
  - Populates the data views from a list of observations using measurement IDs.
  - Convert date from yyyy-mm-dd to dd\mm\yyyy for user friendliness.
  - If the selected data view is populated then add the value as an arg for the DateSelectionDialog.
 CaneInfoFragment:
  - Populates the data views from a list of observations using measurement IDs.

DbContract:
 - Cleaned up some declarations.
 - TODO: implement a table for the measurement IDs and descriptors.

DbHelper:
 - Changed from using individual transactions for inserts to one bulk transaction.
 - When adding observations from a csv file, the number of inserted records is now checked against the number of lines in the file.
 - Implemented adding observations from file.

MainActivity:
 - Shows form selection dialog after initial setup.
 - Removed OnLoginVerifyListener and OnIdentifierDataReceivedListener interfaces.
 - Removed menu item disabling / enabling.
 - Added menu item to clear the Observations table when in DEV mode.
 - No longer needs to implement onbPrepareOptionsMenu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="env">env</string> 
     <string name="api">api_url</string>
     <string name="pref_file">echo.rootstockapp.PREFERENCE_FILE</string>
-    <string name="placeholder_date"></string>
+    <string name="MENU_STATE">lockMenu</string>
+    <string name="START_DATE">start_date</string>
 </resources>
