--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="env">env</string> 
     <string name="api">api_url</string>
     <string name="pref_file">echo.rootstockapp.PREFERENCE_FILE</string>
-    <string name="MENU_STATE">lockMenu</string>
-    <string name="START_DATE">start_date</string>
+    <string name="start_date">start_date</string>
+    <string name="network_login_success_text">Login successful</string>
+    <string name="network_login_fail_text">Error logging in</string>
+    <string name="placeholder_date" />
 </resources>
